<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_17sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_17sdp"
        android:paddingBottom="@dimen/_20sdp"
        android:background="#646464"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/montserrats_semibold"
            android:text="@string/report_clip_or_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <RadioButton
                android:id="@+id/sexual_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/sexual_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <RadioButton
                android:id="@+id/violent_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/violent_or_repulsive_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <RadioButton
                android:id="@+id/hateful_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/hateful_or_abusive_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <RadioButton
                android:id="@+id/harmful_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/harmful_or_dangerous_acts"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <RadioButton
                android:id="@+id/spam_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/spam_or_misleading"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <RadioButton
                android:id="@+id/abuse_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/child_abuse"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />
        </RadioGroup>

        <TextView
            android:id="@+id/report_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/montserrat_medium"
            android:padding="@dimen/_6sdp"
            android:text="@string/report"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textColor="@color/grey_12"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:fontFamily="@font/montserrat_medium"
            android:padding="@dimen/_6sdp"
            android:text="@string/cancel"
            android:textColor="@color/green"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toStartOf="@+id/report_tv"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>