<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_20sdp"
        android:gravity="bottom"
        android:background="@drawable/rounded_cornor_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_40sdp"
            android:text="@string/forget_password"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrats_semibold"
            android:textSize="@dimen/_14sdp"/>

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_white_bg_12"
            android:fontFamily="@font/montserrat_light"
            android:hint="@string/email_address_with_staric"
            android:layout_marginTop="@dimen/_15sdp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_15sdp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_10sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitTV"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/brown"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/edit_profile"
            android:textSize="@dimen/_10sdp"
            android:gravity="center"
            android:layout_gravity="center"
            app:cornerRadius="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/member_tv" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>